# vsc_idf_ESP32_CompSHT85_CompNVM

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: c_build_check_IDFv6_cmake_ninja.yml
components/pridys_SHT85/: CMakeLists.txt  README.md  pridys_SHT85.h
components/pridys_SHT85/crc_handler/: pridys_SHT85_crc_handler.h
components/pridys_SHT85/crc_handler/src/: pridys_SHT85_crc_handler.c
components/pridys_SHT85/i2c_commands/: pridys_SHT85_i2c_commands.h
components/pridys_SHT85/i2c_commands/src/: pridys_SHT85_i2c_commands.c
components/pridys_SHT85/src/: pridys_SHT85.c
components/pridys_SHT85/status_register/: pridys_SHT85_status_register.h
components/pridys_SHT85/status_register/src/: pridys_SHT85_status_register.c
main/: main.c
